--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,11 @@ html, body {
   color: #fff;
   overflow: hidden; /* no scroll on larger screens */
 }
+#root {
+  height: 100%;
+  overflow-y: auto;
+  background-color: rgb(15, 15, 15) ; /* Ensure full height for React root */
+}
 
 /* 
    MAIN WRAPPER
@@ -29,6 +34,7 @@ html, body {
   margin: 0 auto;
   padding: 2rem;
   text-align: center; /* Fill the viewport height */
+  background-color: black;
 }
 
 /* LEFT COLUMN */
@@ -230,6 +236,7 @@ html, body {
   .home-container {
     flex-direction: column;
     height: auto;
+    background-color: black;
   }
   .rounded-bg {
     width: 95%;
